--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToS Visualization</title>
+    <title>Tree of Science Visualization</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+        /* Add your styles here */
+        .node circle {
+            fill: #fff;
+            stroke: steelblue;
+            stroke-width: 3px;
+        }
+        .node text {
+            font: 12px sans-serif;
+        }
+        .link {
+            fill: none;
+            stroke: #ccc;
+            stroke-width: 2px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to ToS Visualization</h1>
-    <p>This is a test page for the Tree of Science visualization.</p>
+    <div id="tree-container"></div>
+    <script src="script.js"></script>
 </body>
 </html>
